namespace MMX
{
    //人类防具装备
    public class HumanArmorEquipment : HumanEquipment
    {
        public HumanArmorEquipmentType type;
        //攻击力
        public int attack;
        //防御力
        public int defense;
        //速度
        public int speed;
        //男人味
        public int manliness;

        //火抗
        public int fireResistance;
        //冰抗
        public int iceResistance;
        //电抗
        public int electricResistance;
        //音波抗性
        public int sonicResistance;
        //瓦斯抗性
        public int gasResistance;
        //激光抗性
        public int laserResistance;
    }
}