namespace MMX
{
    //人类装备
    public class HumanEquipment : HumanItem
    {
        //职业要求
        public int CareerRequirements;
    }
}