namespace MMX
{
    //人类武器装备
    public class HumanWeaponEquipment : HumanEquipment
    {

        //攻击力
        public int attack;
        //攻击范围
        public AttackRangeType attackRangeType;
        ///攻击次数
        public int attacksNum;
        //攻击伤害属性
        public AttackProperty attackProperty;

    }
}