namespace MMX
{
    //战斗道具
    public class BattleItem : HumanItem
    {

    }
}