namespace MMX
{
    //人类道具
    public class HumanItem : Item
    {
        //剩余数量
        public int count;
    }
}