namespace MMX
{
    /// 回复道具
    public class MedicinesItem : HumanItem
    {

    }
}