namespace MMX
{
    /// 通常道具
    public class ToolsItem : HumanItem
    {

    }
}