namespace MMX
{
    //战车C装置
    public class VehicleCUnitEquipment : VehicleEquipment
    {
        //命中
        public int accuracy;
        public int maxAccuracy;
        public int minAccuracy;
        public int accuracyModifiedCount;

        //闪避
        public int evasion;
        public int maxEvasion;
        public int minEvasion;
        public int evasionModifiedCount;
    }
}