namespace MMX
{
    // 战车引擎
    public class VehicleEngineEquipment : VehicleEquipment
    {
        //载重量
        public float capacity;
    }
}