namespace MMX
{
    //战车道具
    public class VehicleItem : Item
    {
        //当前重量
        public int weight;
    }
}