@startuml Item 
Item <|-- HumanItem
HumanItem <|-- ToolsItem
HumanItem <|-- MedicinesItem
HumanItem <|-- BattleItem
HumanItem <|-- HumanEquipment
HumanEquipment <|-- HumanWeaponEquipment
HumanWeaponEquipment ..>  AttackProperty
HumanWeaponEquipment ..>  AttackRangeType
HumanEquipment <|-- HumanArmorEquipment
HumanArmorEquipment ..> HumanArmorEquipmentType

Item <|-- VehicleItem
VehicleItem <|-- VehicleEquipment
VehicleEquipment <|-- VehicleWeaponEquipment
VehicleWeaponEquipment ..>  AttackProperty
VehicleWeaponEquipment ..>  AttackRangeType
VehicleWeaponEquipment ..> VehicleWeaponEquipmentType
VehicleEquipment <|-- VehicleCUnitEquipment
VehicleEquipment <|-- VehicleEngineEquipment


class Item 
{
   + string id
   + int orderNumber
   + string name
   + int buyPrice
   + int sellPrice
   + string desc
   + int star
   + void use()
}

class HumanItem  <人类道具>
{
    + int count;
}
class ToolsItem <通常道具>
{
    
}
class MedicinesItem <回复道具>
{

}
class BattleItem <战斗道具>
{

}
class HumanEquipment <人类装备>
{
    + int CareerRequirements :  职业要求
}
class HumanWeaponEquipment <人类武器>
{

    + int attack : 攻击力
    + AttackRangeType attackRangeType : 攻击范围
    + int attacksNum : 攻击次数
    + AttackProperty attackProperty : 攻击伤害属性
}

class HumanArmorEquipment <人类防具>
{
    + HumanArmorEquipmentType type
    + int attack : 攻击力
    + int defense : 防御力
    + int speed : 速度
    + int manliness : 男人味

    + int fireResistance : 火抗
    + int iceResistance : 冰抗
    + int electricResistance : 电抗
    + int sonicResistance : 音波抗性
    + int gasResistance : 瓦斯抗性
    + int laserResistance : 激光抗性
}

class VehicleItem <战车道具>
{
    + int weight : 当前重量
}

class VehicleEquipment <战车装备>
{
    + int maxWeight : 最大重量
    + int minWeight : 最小重量
    + int virtual modifiedCount { get }: 总改造次数 

    + int defense : 防御力
    + int maxDefense : 最大防御力
    + int minDefense : 最小防御力
    + int defenseModifiedCount : 防御力改造次数

    + int modifiedPrice : 改造一次的价格
}

class VehicleWeaponEquipment <战车武器>
{
    + VehicleWeaponEquipmentType equipmentType;
    + AttackRangeType attackRangeType : 攻击范围
    + AttackProperty attackProperty : 攻击属性
    + int ammoPrice : 弹药价格

    + int attack : 攻击力
    + int maxAttack : 最大攻击力
    + int minAttack : 最小攻击力
    + int attackModifiedCount : 攻击力改造次数

    + int ammo : 弹仓
    + int maxAmmo : 最大弹仓
    + int minAmmo : 最小弹仓
    + int ammoModifiedCount : 弹仓改造次数
}

class VehicleCUnitEquipment <C装置>
{
    
    + int accuracy : 命中
    + int maxAccuracy
    + int minAccuracy
    + int accuracyModifiedCount

    + int evasion : 闪避
    + int maxEvasion
    + int minEvasion
    + int evasionModifiedCount
}

class VehicleEngineEquipment <战车引擎>
{
    float capacity : 载重量
}

enum HumanArmorEquipmentType <人类防具类型>
{
    + head : 头用防具
    + body : 体用防具
    + arms : 手用防具
    + legs : 足用防具
    + accessory : 装饰品
}
enum VehicleWeaponEquipmentType <战车武器类型>
{
    + cannon  : 主炮
    + autogun  : 副炮
    + special : SE
}
enum AttackProperty <攻击属性>
{
    + normal : 通常
    + beam : 光束
    + fire : 火炎
    + ice : 冰
    + electric : 电
    + gas : 毒气
    + sonic : 音波
}
enum AttackRangeType <攻击范围>
{
    + all : 全体  
    + oneEnemy : 单体伤害  
    + smallLine : 小贯通  
    + largeLine : 大贯通  
    + smallFan : 扇形小  
    + largeFan : 扇形大  
    + adjustableFan : 扇形可调节  
}

@enduml